# wisp

./: .claudeignore  .gitattributes  .pre-commit-config.yaml  .prettierrc  Cargo.toml  README.md  justfile  rust-toolchain.toml  skills-lock.json
crates/contract/: Cargo.toml
crates/contract/src/: lib.rs  trip_service.rs
crates/contract/tests/: trait_bounds.rs
crates/core/: Cargo.toml
crates/core/src/: bbox.rs  lib.rs  source_kind.rs  trip.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs
crates/ingest/tests/: smoke.rs
crates/sources/: Cargo.toml
crates/sources/src/: lib.rs
crates/sources/tests/: trait_bounds.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/store/tests/: trait_bounds.rs
